@@ -25,10 +25,10 @@ Collate: 'dimensions.r' 'helper-arrange.r'
     'helper-each.r' 'helper-match-df.r' 'helper-mutate.r'
     'helper-quick-df.r' 'helper-rename.r'
     'helper-round-any.r' 'helper-splat.r'
-    'helper-summarise.r' 'helper-try.r'
-    'helper-vaggregate.r' 'id.r' 'immutable.r'
-    'indexed-array.r' 'indexed-data-frame.r' 'indexed.r'
-    'join.r' 'loop-apply.r' 'ply-array.r'
+    'helper-strip-splits.r' 'helper-summarise.r'
+    'helper-try.r' 'helper-vaggregate.r' 'id.r'
+    'immutable.r' 'indexed-array.r' 'indexed-data-frame.r'
+    'indexed.r' 'join.r' 'loop-apply.r' 'ply-array.r'
     'ply-data-frame.r' 'ply-iterator.r' 'ply-list.r'
     'ply-mapply.r' 'ply-null.r' 'ply-replicate.r'
     'progress.r' 'quote.r' 'rbind-matrix.r' 'rbind.r'
