@@ -12,6 +12,7 @@ export(quickdf)
 export(rename)
 export(round_any)
 export(splat)
+export(strip_splits)
 export(summarise, summarize)
 export(failwith)
 export(try_default)
