@@ -1,6 +1,9 @@
 Version 1.5 (2011-XX-XX)
 ------------------------------------------------------------------------------
 
+* new `strip_splits` function removes splitting variables from the data frames
+  returned by `ddply`.
+
 * `join` now implements joins in a more SQL like way, returning all possible
    matches, not just the first one.  It is still a (little) faster than merge.
    The previous behaviour is accessible with `match = "first"`.
